changes made by15/11

--- a/pages/services.html
+++ b/pages/services.html
@@ -7,21 +7,30 @@
     <div class="mt-8">
       <div class="text-center mb-8">
         <h2 class="section-title text-gray-800 dark:text-white mb-4">
-          Our Work in Action
+          Our services
         </h2>
-        <div class="w-20 h-1 bg-primary-600 mx-auto mb-2"></div>
+        <div class=" bg-primary-600 mx-auto mb-2">
+          <p>
+            <h5>We Offer</h5> 
+            Installations, Startup & Maintenances of Flow Abrasive
+            Waterjet Cutting Systems in the entire Middle East. Our programs are
+            structured with one goal in mind: to ensure you achieve the highest
+            level of efficiency and satisfaction from your Flow Abrasive
+            Waterjet Cutting Systems, from operation to maintenance.
+          </p>
+        </div>
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
         <!-- Service gallery images -->
         <div
           class="gallery-item bg-white dark:bg-gray-700 rounded-xl overflow-hidden shadow-lg group cursor-pointer"
-          data-image="../services/b.jpeg"
+          data-image="../services/installation.jpeg"
           data-title="Installation Service"
         >
           <div class="gallery-image-container">
             <img
-              src="../services/b.jpeg"
+              src="../services/installation.jpeg"
               alt="Installation Service"
               class="gallery-image"
               loading="lazy"
@@ -37,7 +46,7 @@
               Installation
             </h3>
             <p class="text-gray-600 dark:text-gray-300 text-sm">
-              Flow Waterjets Mach2, Mach3 and the latest Mach4 Series
+              Installation, Mach 150, Mach 200, Mach 200c, Mach 500
             </p>
           </div>
         </div>
@@ -126,6 +135,7 @@
           </div>
         </div>
       </div>
+      
     </div>
   </div>
 </section>
