--- a/pages/about.html
+++ b/pages/about.html
@@ -47,4 +47,126 @@
 </div>
         </div>
     </div>
+     <div class="container mx-auto px-4">
+    <!-- Main Services -->
+
+    <!-- Services Gallery Section -->
+    
+
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+        <!-- Service gallery images -->
+        <div
+          class="gallery-item bg-white dark:bg-gray-700 rounded-xl overflow-hidden shadow-lg group cursor-pointer"
+          data-image="../services/installation.jpeg"
+          data-title="Installation Service"
+        >
+          <div class="gallery-image-container">
+            <img
+              src="../services/installation.jpeg"
+              alt="Installation Service"
+              class="gallery-image"
+              loading="lazy"
+            />
+            <div
+              class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+            >
+              <i class="fas fa-expand text-white text-2xl"></i>
+            </div>
+          </div>
+          <div class="p-4">
+            <h3 class="card-title text-gray-800 dark:text-white mb-2">
+              Installation
+            </h3>
+            <p class="text-gray-600 dark:text-gray-300 text-sm">
+            Installation,  Mach 150, Mach 200, Mach 200c, Mach 500
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="gallery-item bg-white dark:bg-gray-700 rounded-xl overflow-hidden shadow-lg group cursor-pointer"
+          data-image="../services/a.jpeg"
+          data-title="Technical Inspection"
+        >
+          <div class="gallery-image-container">
+            <img
+              src="../services/a.jpeg"
+              alt="Technical Inspection"
+              class="gallery-image"
+              loading="lazy"
+            />
+            <div
+              class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+            >
+              <i class="fas fa-expand text-white text-2xl"></i>
+            </div>
+          </div>
+          <div class="p-4">
+            <h3 class="card-title text-gray-800 dark:text-white mb-2">
+              Inspection
+            </h3>
+            <p class="text-gray-600 dark:text-gray-300 text-sm">
+              Project management to Technical Support
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="gallery-item bg-white dark:bg-gray-700 rounded-xl overflow-hidden shadow-lg group cursor-pointer"
+          data-image="../services/f.jpeg"
+          data-title="UHP Pump Service"
+        >
+          <div class="gallery-image-container">
+            <img
+              src="../services/f.jpeg"
+              alt="UHP Pump Service"
+              class="gallery-image"
+              loading="lazy"
+            />
+            <div
+              class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+            >
+              <i class="fas fa-expand text-white text-2xl"></i>
+            </div>
+          </div>
+          <div class="p-4">
+            <h3 class="card-title text-gray-800 dark:text-white mb-2">
+              UHP Pump Service
+            </h3>
+            <p class="text-gray-600 dark:text-gray-300 text-sm">
+              Direct Drive, Intensifier & Hyperjet
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="gallery-item bg-white dark:bg-gray-700 rounded-xl overflow-hidden shadow-lg group cursor-pointer"
+          data-image="../services/h.jpeg"
+          data-title="Software Training"
+        >
+          <div class="gallery-image-container">
+            <img
+              src="../services/h.jpeg"
+              alt="Software Training"
+              class="gallery-image"
+              loading="lazy"
+            />
+            <div
+              class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+            >
+              <i class="fas fa-expand text-white text-2xl"></i>
+            </div>
+          </div>
+          <div class="p-4">
+            <h3 class="card-title text-gray-800 dark:text-white mb-2">
+              Software Training
+            </h3>
+            <p class="text-gray-600 dark:text-gray-300 text-sm">
+              To achieve the highest level of efficiency and satisfaction
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
