--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -5,7 +5,7 @@
             <h2 class="section-title text-gray-800 dark:text-white mb-4">Our Texture Gallery</h2>
             <div class="w-20 h-1 bg-primary-600 mx-auto mb-6"></div>
             <p class="text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
-                Explore our portfolio of waterjet cutting projects showcasing precision, versatility, and quality across various materials and applications.
+              sculpted by pressure, perfected by Flow
             </p>
         </div>
 
