pump images added

--- a/pages/services.html
+++ b/pages/services.html
@@ -9,28 +9,40 @@
         <h2 class="section-title text-gray-800 dark:text-white mb-4">
           Our services
         </h2>
-        <div class=" bg-primary-600 mx-auto mb-2">
-          <p>
-            <h5>We Offer</h5> 
-            Installations, Startup & Maintenances of Flow Abrasive
-            Waterjet Cutting Systems in the entire Middle East. Our programs are
-            structured with one goal in mind: to ensure you achieve the highest
-            level of efficiency and satisfaction from your Flow Abrasive
-            Waterjet Cutting Systems, from operation to maintenance.
+        <div class="text-center max-w-4xl mx-auto">
+          <div class="relative inline-block mb-8">
+            <h2
+              class="text-4xl md:text-5xl font-light text-gray-800 dark:text-white"
+            >
+              We Offer
+            </h2>
+            <div
+              class="absolute -bottom-2 left-1/2 transform -translate-x-1/2 w-24 h-1 bg-blue-600"
+            ></div>
+          </div>
+          <p class="text-lg text-gray-600 dark:text-gray-300 leading-relaxed">
+            <span class="font-medium text-gray-800 dark:text-white"
+              >Installations, Pump Services & Maintenance</span
+            >
+            of Flow Abrasive Waterjet Cutting Systems across the Middle East.
+            Our structured programs focus on delivering maximum efficiency and
+            complete satisfaction with your Flow systems—from initial operation
+            through ongoing maintenance.
           </p>
         </div>
       </div>
+      <div></div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
         <!-- Service gallery images -->
         <div
           class="gallery-item bg-white dark:bg-gray-700 rounded-xl overflow-hidden shadow-lg group cursor-pointer"
-          data-image="../services/installation.jpeg"
+          data-image="../pump/1.jpeg"
           data-title="Installation Service"
         >
           <div class="gallery-image-container">
             <img
-              src="../services/installation.jpeg"
+              src="../pump/1.jpeg"
               alt="Installation Service"
               class="gallery-image"
               loading="lazy"
@@ -43,22 +55,25 @@
           </div>
           <div class="p-4">
             <h3 class="card-title text-gray-800 dark:text-white mb-2">
-              Installation
+              Hyperjet 50 hp
             </h3>
             <p class="text-gray-600 dark:text-gray-300 text-sm">
-              Installation, Mach 150, Mach 200, Mach 200c, Mach 500
+              94,000 psi [6,500 bar] Intensifier Pump The HyperJet intensifier
+              pump is the most advanced and robust high-pressure system
+              available. With 94k HyperPressure technology, you will cut faster
+              and increase production all while reducing costs.
             </p>
           </div>
         </div>
 
         <div
           class="gallery-item bg-white dark:bg-gray-700 rounded-xl overflow-hidden shadow-lg group cursor-pointer"
-          data-image="../services/a.jpeg"
+          data-image="../pump/hyperjet 100hp.jpeg"
           data-title="Technical Inspection"
         >
           <div class="gallery-image-container">
             <img
-              src="../services/a.jpeg"
+              src="../pump/hyperjet 100hp.jpeg"
               alt="Technical Inspection"
               class="gallery-image"
               loading="lazy"
@@ -71,22 +86,25 @@
           </div>
           <div class="p-4">
             <h3 class="card-title text-gray-800 dark:text-white mb-2">
-              Inspection
+              Hyperjet 100hp
             </h3>
             <p class="text-gray-600 dark:text-gray-300 text-sm">
-              Project management to Technical Support
+              94,000 psi [6,500 bar] Intensifier Pump The HyperJet intensifier
+              pump is the most advanced and robust high-pressure system
+              available. With 94k HyperPressure technology, you will cut faster
+              and increase production all while reducing costs.
             </p>
           </div>
         </div>
 
         <div
           class="gallery-item bg-white dark:bg-gray-700 rounded-xl overflow-hidden shadow-lg group cursor-pointer"
-          data-image="../services/f.jpeg"
+          data-image="../pump/3.jpeg"
           data-title="UHP Pump Service"
         >
           <div class="gallery-image-container">
             <img
-              src="../services/f.jpeg"
+              src="../pump/3.jpeg"
               alt="UHP Pump Service"
               class="gallery-image"
               loading="lazy"
@@ -99,22 +117,26 @@
           </div>
           <div class="p-4">
             <h3 class="card-title text-gray-800 dark:text-white mb-2">
-              UHP Pump Service
+              MotoJet
             </h3>
             <p class="text-gray-600 dark:text-gray-300 text-sm">
-              Direct Drive, Intensifier & Hyperjet
+              60,000 psi [4,150 bar] Intensifier Pump The MotoJet intensifier
+              pump sets the industry standard for waterjet and abrasive waterjet
+              cutting applications. Manufactured for the demands of
+              high-production environments, the MotoJet is built for
+              dependability.
             </p>
           </div>
         </div>
 
         <div
           class="gallery-item bg-white dark:bg-gray-700 rounded-xl overflow-hidden shadow-lg group cursor-pointer"
-          data-image="../services/h.jpeg"
+          data-image="../pump/hyplexprime.jpeg"
           data-title="Software Training"
         >
           <div class="gallery-image-container">
             <img
-              src="../services/h.jpeg"
+              src="../pump/hyplexprime.jpeg"
               alt="Software Training"
               class="gallery-image"
               loading="lazy"
@@ -127,15 +149,17 @@
           </div>
           <div class="p-4">
             <h3 class="card-title text-gray-800 dark:text-white mb-2">
-              Software Training
+              HyPlex Prime
             </h3>
             <p class="text-gray-600 dark:text-gray-300 text-sm">
-              To achieve the highest level of efficiency and satisfaction
+              60,000 psi [4,150 bar] Direct Drive Pump The HyPlex Prime pump
+              represents the next generation of energy efficient, direct drive
+              ultrahigh-pressure waterjet pumps. The HyPlex's direct drive
+              delivers superior ratio of input energy to the waterjet.
             </p>
           </div>
         </div>
       </div>
-      
     </div>
   </div>
 </section>
